syntax = "proto3";

package grpc_sample;

option go_package = "github.com/Gavachas/grpc_sample;grpc_sample";


message Incident {
	int32 id = 1;
	string name = 2;
	int32  author = 3;
}
message User {
	int32 id = 1;
	string name = 2;
	string Pass = 3;
}
message UserRules {
	int32 id = 1;
	string name = 2;
	int32 user = 3;
}
message AddIncidentRequest {
    Incident incident  = 1;
}
message AddIncidentResponse {
    Incident incident  = 1;
}
message GetIncidentRequest {
    int32 id  = 1;
}
message GetIncidentResponse {
    Incident incident  = 1;
}
message GetUserRequest {
    int32 id  = 1;
}
message GetUserRegionResponse {
    string name  = 1;
}
  
service ItilService {
   rpc AddIncident (AddIncidentRequest) returns (AddIncidentResponse);
   rpc GetIncident (GetIncidentRequest) returns (GetIncidentResponse);
   rpc GetUserRegion (GetUserRequest) returns (GetUserRegionResponse);
}
   